<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_1"
    android:padding="16dp"
    tools:context="com.example.bisayatranslationquizapp.QuizActivity">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/score"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_category"
        android:layout_marginTop="80dp"
        android:freezesText="true"
        android:text="@string/question"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_score"
        android:freezesText="true"
        android:text="@string/category"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_countdown"
        android:layout_marginLeft="280dp"
        android:text="@string/diff"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:freezesText="true"
        android:text="00:30"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:freezesText="true"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/RelativeLayoutGroup"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/border_box_layout">

        <TextView
            android:id="@+id/text_view_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:freezesText="true"
            android:text="@string/questions"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp">

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:freezesText="true"
                android:text="@string/opt1"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:freezesText="true"
                android:text="@string/opt2"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:freezesText="true"
                android:text="@string/opt3"
                android:textSize="20dp" />

        </RadioGroup>

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_below="@id/RelativeLayoutGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_icon_design"
        android:text="@string/conf"
        android:textAlignment="center" />

</RelativeLayout>